--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.15.0",
+    "@nuxt/ui": "^3.0.2",
+    "@tailwindcss/vite": "^4.1.3",
+    "nuxt": "^3.16.2",
     "prettier": "^3.5.3",
-    "vue": "latest",
+    "tailwindcss": "^4.1.3",
+    "vue": "^3.5.13",
     "vue-router": "latest"
   }
 }
