--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.12.0",
     "@nuxt/ui": "^3.0.2",
     "@tailwindcss/vite": "^4.1.3",
     "nuxt": "^3.16.2",
